# rs-lambda-todos

./: Cargo.toml  README.md
.github/workflows/: rust.yml
cicd/: cdk.json  package-lock.json  package.json
cicd/lib/: cicd-stack.ts
src/: main.rs
src/todos/: domain.rs  mod.rs  repo.rs
src/todos/handlers/: mod.rs  todos_create.rs  todos_delete.rs  todos_index.rs  todos_update.rs
